Make sure the container of all posts has the right width so the Compose button is right aligned.

--- a/scss/partials/_dashboard_layout.scss
+++ b/scss/partials/_dashboard_layout.scss
@@ -19,6 +19,14 @@ div.dashboard-layout {
       background-color: $oc_gray_8;
       position: relative;
 
+      &.all-posts-container {
+        width: 948px;
+
+        div.board-name-container {
+          padding: 0px 0px 0px 12px;
+        }
+      }
+
       @include mobile() {
         width: 100%;
         margin: 0px;
